Rename controllers to Pascal case.

--- a/src/web/templates/admin/customer.html
+++ b/src/web/templates/admin/customer.html
@@ -3,7 +3,7 @@
 
     <h2>History</h2>
 
-    <history-table history="customer.history"></history-table>
+    <cp-history-table history="customer.history"></cp-history-table>
 
     <h2>Details</h2>
 
