--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -3,7 +3,7 @@
 
     <h2>History</h2>
 
-    <history-table history="vendorPackage.history"></history-table>
+    <cp-history-table history="vendorPackage.history"></cp-history-table>
 
     <h2>Edit details</h2>
 
