--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -37,12 +37,12 @@
 
             <div class="form-group">
                 <label for="order_date">Order date and time</label>
-                <input class="form-control input-lg" id="order_date" type="text" readonly ng-model="order.date" convert-date />
+                <input class="form-control input-lg" id="order_date" type="text" readonly ng-model="order.date" cp-convert-date />
             </div>
 
             <div class="form-group">
                 <label for="order_status">Order status</label>
-                <input class="form-control input-lg" id="order_status" type="text" readonly ng-model="order.statusText" format-order-status-text />
+                <input class="form-control input-lg" id="order_status" type="text" readonly ng-model="order.statusText" cp-format-order-status-text />
             </div>
 
             <div class="form-group">
@@ -52,27 +52,27 @@
 
             <div class="form-group">
                 <label for="subtotal_amount">Subtotal</label>
-                <input class="form-control input-lg" id="subtotal_amount" type="text" readonly ng-model="order.subTotalExcludingVat" format-currency />
+                <input class="form-control input-lg" id="subtotal_amount" type="text" readonly ng-model="order.subTotalExcludingVat" cp-format-currency />
             </div>
 
             <div class="form-group">
                 <label for="delivery_amount">Delivery</label>
-                <input class="form-control input-lg" id="delivery_amount" type="text" readonly ng-model="order.shippingTotalExcludingVatAmount" format-currency />
+                <input class="form-control input-lg" id="delivery_amount" type="text" readonly ng-model="order.shippingTotalExcludingVatAmount" cp-format-currency />
             </div>
 
             <div class="form-group">
                 <label for="discount_amount">Discount</label>
-                <input class="form-control input-lg" id="discount_amount" type="text" readonly ng-model="order.voucherAmount" format-currency />
+                <input class="form-control input-lg" id="discount_amount" type="text" readonly ng-model="order.voucherAmount" cp-format-currency />
             </div>
 
             <div class="form-group">
                 <label for="vat_amount"><abbr title="value added tax">VAT</abbr></label>
-                <input class="form-control input-lg" id="vat_amount" type="text" readonly ng-model="order.taxAmount" format-currency />
+                <input class="form-control input-lg" id="vat_amount" type="text" readonly ng-model="order.taxAmount" cp-format-currency />
             </div>
 
             <div class="form-group">
                 <label for="total_amount">Grand total</label>
-                <input class="form-control input-lg" id="total_amount" type="text" readonly ng-model="order.totalAmount" format-currency />
+                <input class="form-control input-lg" id="total_amount" type="text" readonly ng-model="order.totalAmount" cp-format-currency />
             </div>
         </fieldset>
     </form>
@@ -83,13 +83,13 @@
         <fieldset>
             <div class="form-group">
                 <label for="delivery_date">Delivery date and time</label>
-                <input class="form-control input-lg" id="delivery_date" type="text" required aria-describedby="delivery_date_help" aria-required="true" ng-model="order.requestedDeliveryDate" convert-date />
+                <input class="form-control input-lg" id="delivery_date" type="text" required aria-describedby="delivery_date_help" aria-required="true" ng-model="order.requestedDeliveryDate" cp-convert-date />
                 <span class="help-block" id="delivery_date_help">Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</span>
             </div>
 
             <div class="form-group" ng-if="order.isCourier">
                 <label for="pickup_date">Pickup date and time</label>
-                <input class="form-control input-lg" id="pickup_date" type="text" required aria-describedby="pickup_date_help" aria-required="true" ng-model="order.pickupDate" convert-date />
+                <input class="form-control input-lg" id="pickup_date" type="text" required aria-describedby="pickup_date_help" aria-required="true" ng-model="order.pickupDate" cp-convert-date />
                 <span class="help-block" id="pickup_date_help">Changing this will trigger an email to the vendor.</span>
             </div>
 
@@ -176,5 +176,5 @@
 
     <h2>Order history</h2>
 
-    <history-table history="order.history"></history-table>
+    <cp-history-table history="order.history"></cp-history-table>
 </div>
