Install Angular UI's carousel.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -4,6 +4,7 @@
 @import '../lib/ng-grid/ui-grid.scss';
 @import '../lib/angular-slider/angular-slider.scss';
 @import '../lib/angular-ui-datepicker.scss';
+@import '../lib/angular-ui-carousel.scss';
 
 body {
     background: #fff;
