--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -80,20 +80,7 @@
         <h1>{{ packages.length }} package{{ packages.length == 1 ? '' : 's' }} found</h1>
 
         <ul class="packages">
-            <li class="package british breakfast" ng-repeat="package in packages">
-                <a href="/package/{{ package.humanId }}-{{ package.name | slugify }}">
-                    <div class="package-image-wrap">
-                        <div class="package-image" style="background-image: url('{{ package.images[0].medium }}');"></div>
-                        <span class="btn btn-order">Order Now</span>
-                    </div>
-                    <h2 class="package-name">{{ package.name }}</h2>
-                    <span class="package-price">{{ package.costIncludingVat | currency:'£' }} <small>per head</small></span>
-                </a>
-
-                <a class="hidden-xs package-vendor" href="/vendor/{{ package.vendor.id }}-{{ package.vendor.slug }}">
-                    {{ package.vendor.name }}
-                </a>
-            </li>
+            <li ng-repeat="package in packages" cp-package-card package="package" class="package"></li>
         </ul>
     </div>
 
