View package page - right side.

--- a/src/web/scss/customer/view-package.scss
+++ b/src/web/scss/customer/view-package.scss
@@ -6,3 +6,15 @@
         display: block;
     }
 }
+
+.pkg-header {
+    width: 66.6%;
+    float: left;
+}
+
+#view-package {
+    > .vendor {
+        float: right;
+        width: 29%;
+    }
+}
