Update vendor nav links to use correct href.

--- a/app/Resources/views/nav/vendor.html.twig
+++ b/app/Resources/views/nav/vendor.html.twig
@@ -4,9 +4,9 @@
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li role="presentation"><a tabindex="-1" href="/vendor/orders" role="menuitem">Orders</a></li>
         <li role="presentation"><a tabindex="-1" href="/vendor/addresses" role="menuitem">Addresses</a></li>
-        <li role="presentation"><a tabindex="-1" href="/vendor/admin/profile" role="menuitem">Profile</a></li>
-        <li role="presentation"><a tabindex="-1" href="/vendor/admin/packages" role="menuitem">Packages</a></li>
-        <li role="presentation"><a tabindex="-1" href="/vendor/admin/create_package" role="menuitem">Create package</a></li>
+        <li role="presentation"><a tabindex="-1" href="/vendor/profile" role="menuitem">Profile</a></li>
+        <li role="presentation"><a tabindex="-1" href="/vendor/packages" role="menuitem">Packages</a></li>
+        <li role="presentation"><a tabindex="-1" href="/vendor/create-package" role="menuitem">Create package</a></li>
         <li role="presentation"><a tabindex="-1" href="{{ hubspotBase }}/agreement" role="menuitem">Supplier agreement</a></li>
         <li role="presentation"><a tabindex="-1" href="/customer/account" role="menuitem">My details</a></li>
         <li role="presentation"><a tabindex="-1" href="/logout" role="menuitem">Log out</a></li>
