Vendor packages page - show image of each package.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2990,6 +2990,7 @@ fieldset[disabled] .btn-primary.active {
 @import 'customer/search.scss';
 @import 'customer/view-package.scss';
 @import 'vendor/orders.scss';
+@import 'vendor/packages.scss';
 @import 'footer.scss';
 @import 'form.scss';
 @import 'links.scss';
