Completed personal details page, added function to CustomersFactory, added active button class to sidebar.html, added information update test to PersonalInformation.js

--- a/src/web/templates/customer/sidebar.html
+++ b/src/web/templates/customer/sidebar.html
@@ -2,8 +2,8 @@
     <nav class="sidebar-menu" role="navigation">
         <ul class="nav nav-pills nav-stacked">
             <!-- @todo - class 'active' on current page. -->
-            <li><a href="/customer/account">Personal information</a></li>
-            <li><a href="/customer/password">Password</a></li>
+            <li ng-class="{active: page == 'personalDetails'}"><a href="/customer/account">Personal information</a></li>
+            <li ng-class="{active: page == 'changePassword'}"><a href="/customer/password">Password</a></li>
         </ul>
     </nav>
 </aside>
