--- a/src/web/templates/customer/personal-details.html
+++ b/src/web/templates/customer/personal-details.html
@@ -7,21 +7,21 @@
 
             <h2>Personal information</h2>
 
-            <form>
+            <form role="form" ng-submit="save()">
                 <fieldset>
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input class="form-control input-lg" id="name" name="name" type="text" value="{{ user.user.name }}" required="" aria-required="true">
+                        <input class="form-control input-lg" id="name" name="name" type="text" ng-model="user.user.name" required="" aria-required="true">
                     </div>
 
                     <div class="form-group">
                         <label for="company">Company name</label>
-                        <input class="form-control input-lg" id="company" name="company" type="text" value="{{ user.customer.company }}" required="" aria-required="true">
+                        <input class="form-control input-lg" id="company" name="company" type="text" ng-model="user.customer.company" required="" aria-required="true">
                     </div>
 
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input class="form-control input-lg" id="email" name="email" type="email" value="{{ user.user.email }}" required="" aria-required="true">
+                        <input class="form-control input-lg" id="email" name="email" type="email" ng-model="user.user.email" required="" aria-required="true">
                     </div>
 
                     <input class="btn btn-primary btn-lg" type="submit" value="Save changes">
