Made password page, added functions to UsersFactory and NotificationModal

--- a/src/web/templates/customer/change-password.html
+++ b/src/web/templates/customer/change-password.html
@@ -7,21 +7,21 @@
 
             <h2>Password</h2>
 
-            <form>
+            <form role="form" ng-submit="save()">
                 <fieldset>
                     <div class="form-group">
                         <label for="current">Current Password</label>
-                        <input class="form-control input-lg" id="current" name="current" type="password" required="" aria-required="true">
+                        <input class="form-control input-lg" ng-model="currentPassword" id="current" name="current" type="password" required="" aria-required="true">
                     </div>
 
                     <div class="form-group">
                         <label for="new">New Password</label>
-                        <input class="form-control input-lg" id="new" name="new" type="password" required="" aria-required="true">
+                        <input class="form-control input-lg" ng-model="newPassword" id="new" name="new" type="password" required="" aria-required="true">
                     </div>
 
                     <div class="form-group">
                         <label for="confirm">Confirm Password</label>
-                        <input class="form-control input-lg" id="confirm" name="confirm" type="password" required="" aria-required="true">
+                        <input class="form-control input-lg" ng-model="confirmPassword" id="confirm" name="confirm" type="password" required="" aria-required="true">
                     </div>
 
                     <input class="btn btn-primary btn-lg" type="submit" value="Save changes">
