--- a/src/web/templates/customer/sidebar.html
+++ b/src/web/templates/customer/sidebar.html
@@ -2,7 +2,7 @@
     <nav class="sidebar-menu" role="navigation">
         <ul class="nav nav-pills nav-stacked">
             <li ng-class="{active: page == 'personalDetails'}"><a href="/customer/account">Personal information</a></li>
-            <li ng-class="{active: page == 'changePassword'}"><a href="/customer/password">Password</a></li>
+            <li ng-class="{active: page == 'changePassword'}"><a href="/customer/change-password">Password</a></li>
         </ul>
     </nav>
 </aside>
