Add button to approve package.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2987,6 +2987,7 @@ fieldset[disabled] .btn-primary.active {
 @import 'admin/customers.scss';
 @import 'admin/general.scss';
 @import 'admin/orders.scss';
+@import 'admin/packages.scss';
 @import 'customer/search.scss';
 @import 'customer/view-package.scss';
 @import 'vendor/orders.scss';
