Send order message page for customers.

--- a/src/web/templates/customer/orders.html
+++ b/src/web/templates/customer/orders.html
@@ -35,7 +35,7 @@
                         </a>
 
                         <ul class="dropdown-menu" role="menu" aria-labelledby="actions-{{ order.id }}">
-                            <li><a href="/customer/orders/{{ order.id }}/messages">@todo - Message vendor</a></li>
+                            <li><a href="/customer/orders/{{ order.id }}/messages">Message vendor</a></li>
                         </ul>
                     </td>
                 </tr>
