Payment cards pages.

--- a/app/Resources/views/nav/customer.html.twig
+++ b/app/Resources/views/nav/customer.html.twig
@@ -3,7 +3,7 @@
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li role="presentation"><a tabindex="-1" href="/customer/orders" role="menuitem">Orders</a></li>
         <li role="presentation"><a tabindex="-1" href="/customer/addresses" role="menuitem">Addresses</a></li>
-        <li role="presentation"><a tabindex="-1" href="/customer/cards" role="menuitem">Cards</a></li>
+        <li role="presentation"><a tabindex="-1" href="/user/payment-cards" role="menuitem">Cards</a></li>
         <li role="presentation"><a tabindex="-1" href="/customer/account" role="menuitem">My details</a></li>
         <li role="presentation"><a tabindex="-1" href="/logout" role="menuitem">Log out</a></li>
     </ul>
