--- a/src/web/templates/general/view-vendor.html
+++ b/src/web/templates/general/view-vendor.html
@@ -16,8 +16,8 @@
 
                 <p ng-if="vendor.description">{{ vendor.description }}</p>
 
-                <a class="btn btn-primary btn-lg btn-block"
-                    ng-href="/quote/vendor/{{ vendor.id }}-{{ vendor.name | slugify }}">Hire for an event</a>
+                <a class="btn btn-primary btn-lg btn-block hire-for-an-event"
+                    ng-href="/quote/vendor/{{ vendor.id }}">Hire for an event</a>
             </section>
         </div>
 
