Made navigation menu more mobile friendly

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -79,7 +79,7 @@
         <base href="/" />
     </head>
     <body ng-app="cp">
-        {% include 'default-layout/header.html.twig' %}
+        <cp-header></cp-header>
 
         {% block body %}{% endblock %}
 
