Updated CARDS url

--- a/src/web/templates/general/customer-nav-menu-items.html
+++ b/src/web/templates/general/customer-nav-menu-items.html
@@ -7,7 +7,7 @@
     <ul class="cp-nav-menu-my-account" role="menu">
         <li><a href="/customer/orders">Orders</a></li>
         <li><a href="/customer/addresses">Addresses</a></li>
-        <li><a href="/customer/cards">Cards</a></li>
+        <li><a href="/user/payment-cards">Cards</a></li>
         <li><a href="/customer/account">My details</a></li>
         <li><a href="/logout">Log out</a></li>
     </ul>
