--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label for="delivery_address">Drop-off address</label>
-                <input class="form-control input-lg" id="delivery_address" type="text" readonly ng-model="order.deliveryAddress | addressSingleLineFormatter" />
+                <input class="form-control input-lg" id="delivery_address" type="text" readonly value="{{ order.deliveryAddress | addressSingleLineFormatter }}" />
             </div>
 
             <div class="form-group">
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <label for="order_status">Delivery status</label>
-                <input class="form-control input-lg" id="order_status" type="text" readonly ng-model="order.deliveryStatus | getDeliveryStatusText" />
+                <input class="form-control input-lg" id="order_status" type="text" readonly value="{{ order.deliveryStatus | getDeliveryStatusText }}" />
             </div>
 
             <div class="form-group">
