Setting up and approving a customer for payment on account.

--- a/src/web/templates/customer/sidebar.html
+++ b/src/web/templates/customer/sidebar.html
@@ -3,6 +3,7 @@
         <ul class="nav nav-pills nav-stacked">
             <li ng-class="{active: page == 'personalDetails'}"><a href="/customer/account">Personal information</a></li>
             <li ng-class="{active: page == 'changePassword'}"><a href="/customer/change-password">Password</a></li>
+            <li ng-class="{active: page == 'payOnAccount'}"><a href="/customer/pay-on-account">Pay on account</a></li>
         </ul>
     </nav>
 </aside>
