--- a/src/web/scss/admin/general.scss
+++ b/src/web/scss/admin/general.scss
@@ -13,6 +13,14 @@
     padding: 0;
 }
 
+.input-group-readonly .input-group-addon {
+    background-color: transparent;
+    border: 0;
+    color: #444;
+    height: auto;
+    padding: 0;
+}
+
 cp-history-table {
     display: block;
     margin-bottom: 1rem;
