Add 'delivery radiuses' page.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2858,6 +2858,7 @@ label.error {
 @import 'admin/packages.scss';
 @import 'customer/search.scss';
 @import 'customer/view-package.scss';
+@import 'vendor/delivery-radiuses.scss';
 @import 'vendor/orders.scss';
 @import 'vendor/packages.scss';
 @import 'footer.scss';
