--- a/src/web/templates/general/vendor-nav-menu-items.html
+++ b/src/web/templates/general/vendor-nav-menu-items.html
@@ -8,6 +8,7 @@
         My account <span class="caret"></span>
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
+        <li><a href="/vendor/delivery-radiuses">Delivery radiuses</a></li>
         <li><a href="{{ hubspotBase }}/agreement">Supplier agreement</a></li>
         <li><a href="/customer/account">My details</a></li>
         <li><a href="/logout">Log out</a></li>
