Admin invoices and invoice page.

--- a/src/web/scss/admin/general.scss
+++ b/src/web/scss/admin/general.scss
@@ -40,3 +40,8 @@ cp-history-table {
         white-space: pre-line;
     }
 }
+
+.invoice {
+    border: 1px solid #e7e7e7;
+    padding: 2rem 1.5rem;
+}
