--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -1,5 +1,6 @@
 <li><a href="/admin/orders">Orders</a></li>
 <li><a href="/admin/orders/courier">Courier</a></li>
+<li><a href="/admin/invoices">Invoices</a></li>
 <li><a href="/admin/packages">Packages</a></li>
 <li><a href="/admin/vendors">Vendors</a></li>
 <li><a href="/admin/customers">Customers</a></li>
