--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -30,6 +30,16 @@
             <textarea class="form-control input-lg" ng-model="vendorPackage.description" required placeholder="Letting customers know how their food will be packaged, whether it’s individual, buffet or cook on site, is really helpful." rows="6"></textarea>
         </div>
 
+        <div class="form-group">
+            <label>Is a meal plan packages?</label>
+            <input type="checkbox" ng-model="vendorPackage.isMealPlan" />
+        </div>
+
+        <div class="form-group">
+            <label>Packaging type:</label>
+            <select ng-options="type.value as type.label for type in packagingTypes" ng-model="vendorPackage.packagingType"></select>
+        </div>
+
         <input class="btn btn-primary btn-lg" type="submit" value="Save" />
     </form>
 </div>
