Added photo chooser and file input directives

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -9,6 +9,7 @@
 @import '../lib/angular-ui-carousel.scss';
 
 @import 'directives/cp-header';
+@import 'directives/cp-photo-chooser';
 
 html {
     -webkit-font-smoothing: antialiased;
