--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -11,6 +11,7 @@
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
         <li><a href="/admin/vendors/edit">Edit vendors</a></li>
+        <li><a href="/admin/packages/edit">Edit packages</a></li>
         <li><a href="/customer/account">My details</a></li>
         <li><a href="/logout">Log out</a></li>
     </ul>
