--- a/src/web/templates/admin/edit-packages.html
+++ b/src/web/templates/admin/edit-packages.html
@@ -8,6 +8,7 @@
                 <th>Vendor</th>
                 <th>Is meal plan?</th>
                 <th>Packaging type</th>
+                <th>Can deliver cutlery and serviettes?</th>
                 <th>Save</th>
             </tr>
         </thead>
@@ -26,6 +27,9 @@
                     <select ng-options="type.value as type.label for type in packagingTypes"
                         ng-model="package.packagingType"
                         ng-change="package.hasChanged = true"></select>
+                </td>
+                <td>
+                    <input type="checkbox" ng-model="package.canDeliverCutleryAndServiettes" ng-change="package.hasChanged = true" />
                 </td>
                 <td>
                     <button ng-click="save(package)" ng-show="package.hasChanged">Save</button>
