Bootstrap customisation and search styles

--- a/app/Resources/views/default-layout/footer.html.twig
+++ b/app/Resources/views/default-layout/footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="content-info" role="contentinfo">
-    <div class="wrapper">
+    <div class="container">
         <section class="content-info-links">
             <div class="row">
                 <div class="col-sm-5 newsletter" ng-controller="NewsletterController as newsletter">
