--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -1,5 +1,107 @@
+<!--div class="container">
+    <h1 class="cp-heading">This is a title</h1>
+
+    <div class="cp-search-form">
+        <div class="row">
+            <div class="form-group col-md-3">
+                <label class="cp-search-label" for="cp-search-delivery-date">Delivery date</label>
+                <input type="date" class="cp-search-field" id="cp-search-delivery-date">
+            </div>
+            <div class="form-group col-md-2">
+                <label class="cp-search-label" for="cp-search-delivery-time">Time</label>
+                <input type="time" class="cp-search-field" id="cp-search-delivery-date" placeholder="-">
+            </div>
+            <div class="form-group col-md-2">
+                <label class="cp-search-label" for="cp-search-people-count">How many people?</label>
+                <input type="number" class="cp-search-field" id="cp-search-people-count" placeholder="-">
+            </div>
+            <div class="form-group col-md-2">
+                <label class="cp-search-label" for="cp-search-delivery-location">Delivery location</label>
+                <input type="text" class="cp-search-field" id="cp-search-delivery-location" placeholder="SW3 5JR">
+            </div>
+            <div class="form-group col-md-3">
+                <label class="cp-search-budget-per-person-label" for="cp-search-budget-per-person">Budget per person</label>
+                <output class="cp-search-budget-per-person-output" for="budgetPerPerson">
+                    £{{ search.maxBudget }}
+                </output>
+                <input ng-model="search.maxBudget" type="range" class="cp-search-budget-per-person-input" name="cp-search-budget-per-person" min="1" max="50" step="1">
+            </div>
+        </div>
+        <div class="row form-inline">
+            <div class="form-group col-xs-10">
+                <span class="cp-search-event-type-label">Event Type:</span>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Breakfast</label>
+                </div>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Lunch</label>
+                </div>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Dinner</label>
+                </div>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Sweets</label>
+                </div>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Canapé</label>
+                </div>
+                <div class="checkbox">
+                    <label class="cp-search-event-type"><input type="checkbox"> Snacks</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" ng-repeat="package in packages track by $index" ng-if="$index % 4 == 0">
+        <div class="col-xs-3 cp-search-package" ng-if="packages[$index + 0]">
+            <div class="cp-search-package-photo">
+                <img ng-src="{{ packages[$index + 0].images[0].medium }}">
+            </div>
+            <div class="whatevr">
+                <h2 class="cp-search-package-name">{{ packages[$index + 0].name }}</h2>
+                <p class="cp-search-package-vendor">{{ packages[$index + 0].vendor.name }}</p>
+            </div>
+            <div class="cp-search-package-price">
+            </div>
+        </div>
+        <div class="col-xs-3 cp-search-package" ng-if="packages[$index + 1]">
+            <div class="cp-search-package-photo">
+                <img ng-src="{{ packages[$index + 1].images[0].medium }}">
+            </div>
+            <div class="whatevr">
+                <h2 class="cp-search-package-name">{{ packages[$index + 1].name }}</h2>
+                <p class="cp-search-package-vendor">{{ packages[$index + 1].vendor.name }}</p>
+            </div>
+            <div class="cp-search-package-price">
+            </div>
+        </div>
+        <div class="col-xs-3 cp-search-package" ng-if="packages[$index + 2]">
+            <div class="cp-search-package-photo">
+                <img ng-src="{{ packages[$index + 2].images[0].medium }}">
+            </div>
+            <div class="whatevr">
+                <h2 class="cp-search-package-name">{{ packages[$index + 2].name }}</h2>
+                <p class="cp-search-package-vendor">{{ packages[$index + 2].vendor.name }}</p>
+            </div>
+            <div class="cp-search-package-price">
+            </div>
+        </div>
+        <div class="col-xs-3 cp-search-package" ng-if="packages[$index + 3]">
+            <div class="cp-search-package-photo">
+                <img ng-src="{{ packages[$index + 3].images[0].medium }}">
+            </div>
+            <div class="whatevr">
+                <h2 class="cp-search-package-name">{{ packages[$index + 3].name }}</h2>
+                <p class="cp-search-package-vendor">{{ packages[$index + 3].vendor.name }}</p>
+            </div>
+            <div class="cp-search-package-price">
+            </div>
+        </div>
+    </div>
+</div-->
+
 <div class="wrapper" id="search-page">
-    <div class="col-sm-3 sidebar">
+    <div class="col-xs-3 sidebar">
         <h3 class="sr-only">Filter</h3>
 
         <form class="filter-form" role="form">
@@ -82,7 +184,7 @@
 
     <p ng-show="isSearching">Seaching...</p>
 
-    <div class="col-sm-9" ng-show="!isSearching">
+    <div class="col-xs-9" ng-show="!isSearching">
         <h1>{{ packages.length }} package{{ packages.length == 1 ? '' : 's' }} found</h1>
 
         <ul class="packages">
